agregando mmicroservicios a limits-service, comunicacion de un endpoint a un server que apunta a un archivo de configuraciones

--- a/limits-service/src/main/resources/application.properties
+++ b/limits-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.config.import=optional:configserver:http://localhost:8888
 
 spring.profiles.active=qa
 spring.cloud.config.profile=qa
+#spirng.cloud.config.name=
 
 limits-service.minimum=3
 limits-service.maximum=997
